# ESP-IDF-FIREBASE

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  base64.c  base64.h  component.mk  main.c
main/certs/: .rnd  certificate.pem  prvtkey.pem  servercert.pem
